# salsa20

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_number.py  manifest_build_number.sh  salsa.pro
android/: AndroidManifest.xml
files/usr/share/applications/: salsa.desktop
include/: data_model.h  data_model_controller.h  json_parser.h  salsa20.h  salsa_file_wrapper.h  version.h  view_model.h
qml/: AboutApp.qml  CardList.qml  CardView.qml  EnterScreen.qml  FilePicker.qml  PasswordDelegate.qml  main.qml  qml_resources.qrc
src/: data_model.cpp  data_model_controller.cpp  json_parser.cpp  main.cpp  salsa20.cpp  salsa_file_wrapper.cpp  view_model.cpp
